fixed the broken css slighly

--- a/src/App.css
+++ b/src/App.css
@@ -1,66 +1,142 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
 .App {
   text-align: center;
 }
 
+.earth {
+  top: 70%;
+  position: absolute;
+  left: 50%; /* center the element horizontally */
+  transform: translate(-50%, 0); /* move the element back by half its width to center it */
+  width: 40rem; /* specify the width of the element to ensure proper centering */
+  height: 40rem; /* specify the height of the element if needed */
+}
+
+.sig {
+  font-family: 'Pacifico', cursive;
+  font-size: 7em;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  text-align: left;
+  position: absolute;
+  transition: all 0.5s;
+  top: 0;
+  left: 2rem; /* position the element on the top left corner of the screen */
+  margin: 0px; /* add some margin to the element */
+}
+
+.dark-sig {
+  font-family: 'Pacifico', cursive;
+  font-size: 7em;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  text-align: left;
+  position: absolute;
+  transition: all 0.5s;
+  top: 0;
+  left: 2rem; /* position the element on the top left corner of the screen */
+  margin: 0px; /* add some margin to the element */
+}
+
+
 .toggle-button img {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   vertical-align: middle;
 }
 
 .toggle-button {
-  background-color: #333;
+  background-color: rgb(240, 240, 240);
   border: 1px solid #000;
   color: white;
   padding: 8px 16px;
   font-size: 16px;
   cursor: pointer;
+  margin-top: 5px;
+  border-radius: 5px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  z-index: 10;
 }
 
 .toggle-button:hover {
-  background-color: #555;
+  background-color: rgb(179, 179, 179);
 }
 
 .title {
-  font-size: 2em;
-  font-weight: bold;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  transform: translate(50%, 50%);
-}
-
-.title {
-  font-size: 2em;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.75em;
   font-weight: bold;
   color: rgb(0, 0, 0);
   text-align: center;
   position: absolute;
   top: 50%;
-  transform: translate(50%, 50%);
+  transform: translate(50%);
+  transition: all 0.5s;
+}
+
+.dark-title {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.75em;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translate(50%);
+  transition: all 0.5s;
 }
 
 .nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
   height: 50px;
-  background-color: white;
   position: absolute;
+  top: 10px;
+  right: 10%; /* adjust this value to position the element along from the toggle-button element */
+  margin-left: 20px; /* add some margin to the left side of the element */
+  z-index: 10; /* set a higher z-index value to ensure the element appears on top of the canvas */
 }
 
 .dark-nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
   height: 50px;
-  background-color: rgb(0, 0, 0);
   position: absolute;
+  top: 10px;
+  right: 10%; /* adjust this value to position the element along from the toggle-button element */
+  margin-left: 20px; /* add some margin to the left side of the element */
+  z-index: 10;
+}
+
+.dark-nav a {
+  font-family: 'Ubuntu', sans-serif;
+  padding: 8%;
+  color: white;
+  text-decoration: none;
+  font-size: 1.3em;
+  transition: all 0.2s;
+}
+
+.dark-nav a:hover {
+  color: lightgray;
+}
+
+.nav a {
+  font-family: 'Ubuntu', sans-serif;
+  padding: 8%;
+  color: black;
+  text-decoration: none;
+  font-size: 1.3em;
+  transition: all 0.2s;
+}
+
+.nav a:hover {
+  color: gray;
 }
